# model-mini-boat

./: CMakeLists.txt  partitions_example.csv  sdkconfig
front/a/: dataTest.py  package-lock.json  package.json
front/a/src/: App.css  DataContext.js  DataSender.js  Display.js  Fullscreen.js  IsFullscreenContext.js  JoystickX.js  LedsInput.js  Speedometr.js  Temp.js  ThrottleSlider.js  Visualisation.js  index.js  useOrientation.js
front/a/src/pages/: Controls.js  Layout.js  Leds.js
front/web-demo/public/: index.html
main/: CMakeLists.txt  data_types.h  esp_rest.c  esp_rest.h  joystick.c  joystick.h  led.c  led.h  led_strip_encoder.c  main.c  motor.c  motor.h  rest_server.c  rest_server.h  screen.c  screen.h  servo.c  servo.h
